--- a/packages/rocketchat-i18n/i18n/it.i18n.json
+++ b/packages/rocketchat-i18n/i18n/it.i18n.json
@@ -2503,6 +2503,10 @@
   "This_is_a_push_test_messsage": "Questa è una prova di notifica push",
   "This_room_has_been_archived_by__username_": "Questo canale è stato archiviato da __username__",
   "This_room_has_been_unarchived_by__username_": "Questo canale è stato disarchiviato da __username__",
+  "Thread_modal_prev": "Indietro",
+  "Thread_modal_next": "Avanti",
+  "thread": "Richiesta",
+  "Threads": "Richieste",
   "Thursday": "Giovedì",
   "Time_in_seconds": "Tempo in secondi",
   "Title": "Titolo",
