#1763 implementazione logica condizionale tags traduzione

--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -1044,6 +1044,7 @@
   "Displays_action_text": "Displays action text",
   "Discussion_name": "Discussion name",
   "Discussions": "Discussions",
+  "Discussion": "Discussion",
   "Discussion_start": "Start a discussion",
   "Discussion_target_channel_description": "Select a channel which is related to what you want to ask",
   "Discussion_target_channel_prefix": "You are creating a discussion in",
@@ -1052,6 +1053,11 @@
   "Discussion_description": "Help keeping an overview about what's going on! By creating a discussion, a sub-channel of the one you selected is created and both are linked.",
   "Discussion_first_message_title": "Your message",
   "Discussion_title": "Create a new discussion",
+  "Discussion_extended_info_eta": "Età",
+  "Discussion_extended_info_varieta": "Varietà",
+  "Discussion_extended_info_allevamento":  "Allevamento",
+  "Discussion_extended_info_posizione": "Posizione",
+  "Discussion_extended_info_esposizione":  "Esposizione",
   "Dont_ask_me_again": "Don't ask me again!",
   "Dont_ask_me_again_list": "Don't ask me again list",
   "Do_not_display_unread_counter": "Do not display any counter of this channel",
