--- a/packages/rocketchat-i18n/i18n/it.i18n.json
+++ b/packages/rocketchat-i18n/i18n/it.i18n.json
@@ -934,6 +934,26 @@
   "Display_offline_form": "Mostra il modulo offline",
   "Display_unread_counter": "Mostra il numero di messaggi non letti",
   "Displays_action_text": "Mostra il testo di azione",
+  "Discussion_name": "Nome Ticket",
+  "Discussions": "Ticket",
+  "Discussion": "Ticket",
+  "Discussion_start": "Apri un ticket",
+  "Discussion_target_channel_description": "Seleziona il canale di riferimento al ticket",
+  "Discussion_target_channel_prefix": "Stai creando un ticket in..",
+  "Discussion_target_channel": "Canale genitore",
+  "discussion-created": "__message__",
+  "Discussion_description": "Help keeping an overview about what's going on! By creating a discussion, a sub-channel of the one you selected is created and both are linked.",
+  "Discussion_first_message_title": "Il tuo messaggio",
+  "Discussion_extended_info_eta": "Età",
+  "Discussion_extended_info_varieta": "Varietà",
+  "Discussion_extended_info_allevamento":  "Allevamento",
+  "Discussion_extended_info_posizione": "Posizione",
+  "Discussion_extended_info_esposizione":  "Esposizione",
+  "Discussion_extended_info_tipoFitosanitario": "Tipo Fitosanitario",
+  "New_discussion_first_message": "Qual è il motivo di questo ticket?",
+  "Discussion_title": "Crea un nuovo ticket",
+  "New_discussion": "Nuovo ticket",
+  "New_discussion_name": "Titolo del ticket",
   "Dont_ask_me_again": "Non chiedermelo più!",
   "Dont_ask_me_again_list": "Non chiedermelo di nuovo",
   "Do_not_display_unread_counter": "Non visualizzare alcun contatore di questo canale",
